# distributed-rag-system

./: .env.example  Makefile  README.md  conftest.py  main.py  pyproject.toml
.github/workflows/: ci.yml
docs/high_level_design/: distributed_rag_system_architecture.excalidraw  hexagonal_architecture.excalidraw  high_leve_design_doc.md  high_level_design_doc.md  ingestion_flow_scheduled_refresh.excalidraw  query_flow_happy_path_with_cache_miss.excalidraw  semantic_cache_flow.excalidraw
evals/: pyproject.toml
evals/datasets/: answers_cache.json  candidates.json  generate_golden_set.py
evals/results/: latency_v1.csv  ragas_v1.csv
evals/runners/: auth_client.py  compare_reports.py  latency_bench.py  ragas_eval.py
graphify-out/: .graphify_labels.json  .graphify_python  .graphify_root  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
graphify-out/cache/: stat-index.json
infrastructure/docker/: docker-compose.infra.yml  prometheus.yml  traefik-dynamic.yml  traefik.yml
infrastructure/scripts/: init_qdrant.sh  init_topics.sh
services/admin/: pyproject.toml
services/admin/src/: config.py  main.py
services/admin/src/api/v1/routes/: health.py
services/ingestion/: alembic.ini  pyproject.toml
services/ingestion/src/: config.py  main.py
services/ingestion/src/adapters/publisher/: redpanda.py
services/ingestion/src/adapters/sources/: wikipedia.py
services/ingestion/src/api/v1/routes/: health.py  ingest.py
services/ingestion/src/domain/models/: document.py
services/ingestion/src/domain/ports/: document_source.py  event_publisher.py
services/ingestion/src/domain/services/: ingestion_service.py
services/ingestion/src/migrations/: env.py
services/ingestion/src/migrations/versions/: 4252d99b5247_create_documents_and_ingestion_jobs.py
services/query/: pyproject.toml
services/query/src/: config.py  main.py  tracing.py
services/query/src/adapters/cache/: exact_cache.py  semantic_cache.py
services/query/src/adapters/embedder/: bm25_embedder.py  ollama_embedder.py
services/query/src/adapters/llm/: ollama_provider.py
services/query/src/adapters/reranker/: flashrank_reranker.py
services/query/src/adapters/vector_store/: qdrant_adapter.py
services/query/src/api/: dependencies.py  middleware.py
services/query/src/api/v1/routes/: auth.py  health.py  query.py
services/query/src/domain/models/: generation.py  query.py
services/query/src/domain/ports/: embedding_provider.py  llm_provider.py  reranker.py  sparse_embedding_provider.py  vector_store.py
services/query/src/domain/services/: cached_query_service.py  prompt_builder.py  query_service.py  retriever.py
services/query/tests/: conftest.py  test_exact_cache.py  test_prompt_builder.py
services/worker/: conftest.py  pyproject.toml
services/worker/src/: config.py  main.py
services/worker/src/adapters/: qdrant_adapter.py
services/worker/src/consumers/: document_consumer.py
services/worker/src/domain/models/: chunk.py
services/worker/src/domain/services/: chunker.py  embedder.py  sparse_embedder.py
services/worker/tests/: conftest.py  test_chunker.py  test_sparse_embedder.py
shared/: pyproject.toml
shared/src/rag_shared/models/: events.py
