[project]
name = "distributed-rag-system"
version = "0.1.0"
description = "A distributed RAG system implementation"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[tool.uv.workspace]
members = [
    "services/query",
    "services/ingestion",
    "services/worker",
    "services/admin",
    "shared",
    "evals",
]

[tool.uv.sources]
rag-shared = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27", # Async test client for FastAPI
    "ruff>=0.4", # Linter + formatter
    "mypy>=1.10",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
