[project]
name = "rag-shared"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7",
    "python-jose[cryptography]>=3.3",
    "structlog>=24.1",
    "opentelemetry-api>=1.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rag_shared"]