[project]
name = "rag-worker-service"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "structlog>=24.1",
    "aiokafka>=0.11",
    "langchain-text-splitters>=0.2",
    "httpx>=0.27",
    "qdrant-client>=1.9",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "fastembed>=0.3",
    "rag-shared",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv.sources]
rag-shared = { workspace = true }